fixed spacing inside

--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ td, th {
     margin-right: 1em ;
     margin-left: 1em;
 }
+tbody {
+    margin-right: 0;
+}
 
 #coffeeName {
     font-weight: bold;
